apps/hass/codeserver/codeserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: hass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
      - name: codeserver
        image: ghcr.io/linuxserver/code-server:4.89.1@sha256:0ae10d8668a499f1e3ceb16f12f242c4d8ec1b26ff0c5b2345b58969249a5ccb
        ports:
        - containerPort: 8443
          name: http
          protocol: TCP
        volumeMounts:
        - name: codeserver-data
          mountPath: /config
        - name: codeserver-repos-data
          mountPath: /home/source-repos
        - name: appdaemon-data
          mountPath: /home/appdaemon-data
        - name: hass-data
          mountPath: /home/hass-data
        - name: portainer-data
          mountPath: /home/portainer-data
        - name: zwave-data
          mountPath: /home/zwave-data
        resources:
          requests:
            memory: 250Mi
            cpu: "7m"
          limits:
            memory: 500Mi
        livenessProbe: &probe
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
        readinessProbe: *probe
      volumes:
      - name: codeserver-data
        persistentVolumeClaim:
          claimName: codeserver-pvc
      - name: codeserver-repos-data
        persistentVolumeClaim:
          claimName: codeserver-repos-pvc
      - name: appdaemon-data
        persistentVolumeClaim:
          claimName: appdaemon-pvc
      - name: hass-data
        persistentVolumeClaim:
          claimName: hass-pvc
      - name: portainer-data
        persistentVolumeClaim:
          claimName: portainer-pvc
      - name: zwave-data
        persistentVolumeClaim:
          claimName: zwave-pvc
