apps/hass/codeserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: hass
  labels:
    app: codeserver
spec:
  selector:
    app: codeserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
  clusterIP: None
