apps/hass/codeserver/codeserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  namespace: hass
spec:
  ingressClassName: nginx
  rules:
  - host: codeserver.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: codeserver
              port:
                number: 8080
